Vector pass in Cycles shows objects in mask layers #35614

Closed
opened 2013-06-03 13:11:17 +02:00 by Ray Mairlot · 3 comments

%%%--- Operating System, Graphics card ---

Windows 7 64-bit
Nvidia GTX 570

- Blender version with error, and version that worked ---

Error in 2.67b official and r57165 (latest from builder.blender)

- Short description of error ---

I have a render layer that is set to render layer 1 and be masked by layer 2 using the render layers tab. The object in the mask layer is visible in the vector pass in addition to the object on layer 1. This seems unexpected as I don't think an object that is set to be a mask should be visible in the vector pass and it also differs to Blender internal renderer which does not include masked objects in the pass, leading me to think this is a bug.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

There a few frames of animation in the attached file just to generate some visible vector data:

1.Render attached file to see vector output from cycles (both main cube and mask cube are visible)
2.Change render engine to Blender Render.
3.Render to see expected vector pass result (main cube visible, mask cube invisible).

%%%

%%%--- Operating System, Graphics card --- Windows 7 64-bit Nvidia GTX 570 - Blender version with error, and version that worked --- Error in 2.67b official and r57165 (latest from builder.blender) - Short description of error --- I have a render layer that is set to render layer 1 and be masked by layer 2 using the render layers tab. The object in the mask layer is visible in the vector pass in addition to the object on layer 1. This seems unexpected as I don't think an object that is set to be a mask should be visible in the vector pass and it also differs to Blender internal renderer which does not include masked objects in the pass, leading me to think this is a bug. - Steps for others to reproduce the error (preferably based on attached .blend file) --- There a few frames of animation in the attached file just to generate some visible vector data: 1.Render attached file to see vector output from cycles (both main cube and mask cube are visible) 2.Change render engine to Blender Render. 3.Render to see expected vector pass result (main cube visible, mask cube invisible). %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35614
No description provided.