Fix #35614: cycles objects on mask layer in render layers were writing passes such as motion/uv/normal but they should have been excluded from them.